<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_signup"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edittext">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_gravity="center_horizontal"
           android:padding="24dp">

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/login"
               android:id="@+id/loginText"
               android:textSize="36sp"
               android:textAlignment="center"
               android:textStyle="bold"
               android:textColor="@color/medium_brown" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:id="@+id/txtUsername"
               android:background="@drawable/edittext"
               android:drawableLeft="@drawable/ic_baseline_person_24"
               android:drawablePadding="8dp"
               android:hint="@string/username"
               android:autofillHints="username"
               android:padding="10dp"
               android:inputType="text"
               android:textColor="@color/black"
               android:textColorHighlight="@color/cardview_dark_background"
               android:layout_marginTop="40dp" />

           <EditText
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:id="@+id/txtPassword"
               android:background="@drawable/edittext"
               android:drawableLeft="@drawable/ic_baseline_lock_24"
               android:drawablePadding="8dp"
               android:hint="@string/password"
               android:autofillHints="username"
               android:padding="10dp"
               android:inputType="textPassword"
               android:textColor="@color/black"
               android:textColorHighlight="@color/cardview_dark_background"
               android:layout_marginTop="40dp" />

           <Button
               android:id="@+id/btnLogIn"
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:layout_marginTop="30dp"
               android:backgroundTint="@color/medium_brown"
               android:text="@string/btnLogin"
               android:textSize="18sp"
               app:cornerRadius="30dp"
               tools:ignore="DuplicateSpeakableTextCheck" />

       </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/resetPassword"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/forgotPassword"
        android:textColor="@color/medium_brown"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/signInPrompt"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/signUpText"
        android:textColor="@color/medium_brown"
        android:layout_marginBottom="20dp" />

</LinearLayout>