<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistrationStep2"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreDetails"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/medium_brown" />

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="text"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="text"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="phone"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="8dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/medium_brown"
                android:text="@string/Continue"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/cancel"
        android:textColor="@color/medium_brown"
        android:layout_marginBottom="20dp" />

</LinearLayout>