<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistrationPart3"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edittext">

        <LinearLayout
            android:id="@+id/rootContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/img"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/medium_brown" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/myConstraint"
                android:layout_gravity="center"
                android:padding="24dp">


                <ImageView
                    android:id="@+id/myImageView"
                    android:layout_width="288dp"
                    android:layout_height="287dp"
                    android:contentDescription="@string/userImageDescription"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnGetImageFromUser"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/medium_brown"
                android:text="@string/imageButton"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btnToNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/medium_brown"
                android:text="@string/Continue"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>
        <ProgressBar
            android:id="@+id/simpleProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/cancelImageReg"
        android:textColor="@color/medium_brown"
        android:layout_marginBottom="20dp" />

</LinearLayout>