<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_signup"
    tools:context=".SignUp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnSignUp"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/medium_brown" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_mail_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/txtEmail2"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_mail_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_email"
                android:autofillHints="emailAddress"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/txtPassword"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:autofillHints="username"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/txtPassword2"
                android:background="@drawable/edittext"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:autofillHints="username"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp" />

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/medium_brown"
                android:text="@string/btnSignUp"
                android:textSize="18sp"
                app:cornerRadius="30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/login_prompt"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/goBackToLogin"
        android:textColor="@color/medium_brown"
        android:layout_marginBottom="20dp" />

</LinearLayout>