<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Listings"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/imageCardView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@color/nude">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageSwitcher
                    android:id="@+id/imageSwitcher"
                    android:layout_width="match_parent"
                    android:layout_height="260dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp">

                </ImageSwitcher>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/imageSwitcher"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp">


                    <Button
                        android:id="@+id/buttonPrev"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prev"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonAddNewImage"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:backgroundTint="@color/mocha"/>

                    <Button
                        android:id="@+id/buttonAddNewImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imageButton"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/buttonPrev"
                        app:layout_constraintTop_toTopOf="parent"
                        android:backgroundTint="@color/sienna"/>

                    <Button
                        android:id="@+id/buttonNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/buttonAddNewImage"
                        app:layout_constraintTop_toTopOf="parent"
                        android:backgroundTint="@color/mocha"/>

                </androidx.constraintlayout.widget.ConstraintLayout>


            </RelativeLayout>

            <ProgressBar
                android:id="@+id/simpleProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_centerHorizontal="true"/>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/itemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/prodName"
            app:hintTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:endIconMode="clear_text"
            app:helperText="Required *"
            app:helperTextTextColor="@color/burgundy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageCardView"
            app:startIconDrawable="@drawable/ic_baseline_shopping_bag_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="55"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/itemOutlineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/prodCondition"
            app:hintTextColor="@color/black"
            app:helperText="Required *"
            app:helperTextTextColor="@color/burgundy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
            app:startIconDrawable="@drawable/ic_baseline_view_list_24">

            <AutoCompleteTextView
                android:id="@+id/txtCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout6"
            style="@style/itemOutlineStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/prodCategory"
            app:hintTextColor="@color/black"
            app:helperText="Required *"
            app:helperTextTextColor="@color/burgundy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconDrawable="@drawable/ic_baseline_view_list_24">

            <AutoCompleteTextView
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/itemTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="100dp"
            android:hint="@string/prodDescription"
            app:hintTextColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="300"
            app:endIconMode="clear_text"
            app:helperText="Required *"
            app:helperTextTextColor="@color/burgundy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
            app:startIconDrawable="@drawable/ic_baseline_sort_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLength="310"
                android:maxLines="10"
                android:minLines="4"
                android:scrollbarStyle="insideOverlay"
                android:scrollbars="vertical"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="90dp"
            android:text="@string/Continue"
            android:backgroundTint="@color/sienna"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>